widget_derive/tests/ui/declare/unused_warning_fail.stderr
error: Test for declare syntax warning.
 --> tests/ui/declare/unused_warning_fail.rs:4:3
  |
4 |   compile_error!("Test for declare syntax warning.");
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `test_id` does not be used
  --> tests/ui/declare/unused_warning_fail.rs:10:11
   |
10 |       id: test_id,
   |           ^^^^^^^
   |
help: Remove this line.
  --> tests/ui/declare/unused_warning_fail.rs:10:11
   |
10 |       id: test_id,
   |           ^^^^^^^
